# era-boojum-cuda

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
benches/: blake2s.rs  gates.rs  goldilocks.rs  ntt.rs  ops_complex.rs  poseidon.rs
boojum-cuda/: Cargo.toml
boojum-cuda/benches/: gates.rs  ntt.rs  ops_complex.rs
boojum-cuda/native/: CMakeLists.txt  barycentric.cu  blake2s.cu  carry_chain.cuh  context.cu  gates.cuh  gates_poseidon.cuh  gates_template.cu  goldilocks_extension.cuh  memory.cuh  ntt_b2n.cuh  ntt_n2b.cuh  ops_complex.cu  ops_complex.cuh  poseidon2_single_thread.cu  poseidon2_single_thread.cuh  poseidon_common.cu  poseidon_constants_template.cuh  poseidon_single_thread.cuh  ptx.cuh
boojum-cuda/native/ops_cub/: device_scan.cu
boojum-cuda/src/: .gitignore  barycentric.rs  blake2s.rs  context.rs  device_structures.rs  extension_field.rs  gates.rs  gates_data_template.rs  lib.rs  ntt.rs  ops_complex.rs  poseidon.rs  tests_helpers.rs  utils.rs
boojum-cuda/src/ops_cub/: device_radix_sort.rs  device_reduce.rs  device_scan.rs  mod.rs
criterion-cuda/: Cargo.toml
criterion-cuda/src/: lib.rs
cudart/: Cargo.toml
cudart-sys/: Cargo.toml  build.rs
cudart-sys/src/: lib.rs  path.rs
cudart/src/: device.rs  error.rs  event.rs  execution.rs  lib.rs  memory.rs  memory_pools.rs  occupancy.rs  peer.rs  result.rs  stream.rs  unified.rs
cudart/src/slice/: allocation_data.rs  cuda_slice.rs  cuda_variable.rs  device_slice.rs  device_variable.rs  index.rs  iter.rs  mod.rs
native/: .gitignore  CMakeLists.txt  barycentric.cu  common.cuh  context.cu  context.cuh  gate_kernels_template.cuh  gates.cu  gates_poseidon.cuh  goldilocks.cuh  goldilocks_extension.cu  goldilocks_extension.cuh  memory.cuh  ntt.cu  ntt_b2n.cuh  ntt_n2b.cuh  ops_complex.cu  ops_simple.cu  poseidon2_cooperative.cu  poseidon_constants_template.cuh  poseidon_cooperative.cu  poseidon_single_thread.cu  poseidon_utils.cuh
native/ops_cub/: common.cuh  device_radix_sort.cu  device_reduce.cu  device_run_length_encode.cu
src/: barycentric.rs  blake2s.rs  context.rs  device_structures.rs  extension_field.rs  gates.rs  gates_data_template.rs  lib.rs  ntt.rs  ops_complex.rs  ops_simple.rs  poseidon.rs  utils.rs
src/ops_cub/: device_radix_sort.rs  device_reduce.rs  device_run_length_encode.rs  device_scan.rs
